# langchain-rag-agent

./: README.md
chap2-function-calling/: function.py
chap3-prompt/: prompt1.py
chap4-langchain-basic/: baseline-rag.py  chain.py  chain2.py  models.py  output-purser.py  prompt_templete.py  pyproject.toml  rag_chat.py  str_outputpurser.py
chap5-LCEL/: basic_lcel.py  parallels.py  parallels_2.py  pyproject.toml  runnable.py  runnable_lambda.py  runnable_lambda2.py  runnable_through.py  runnable_through2.py  streaming.py
chap6-advanced-rag/: baseline-rag.py  hybrid-rag.py  hyde.py  multi-hyde.py  pyproject.toml  rag-fusion.py  rerank.py  route-rag.py
uv-management/: README.md  pyproject.toml
