[project]
name = "chap4-langchain-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython==3.1.43",
    "langchain-chroma>=0.2.2",
    "langchain-community==0.3.0",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.7",
]
